--- a/PlaceHolderView/app/src/main/res/layout/revistas.xml
+++ b/PlaceHolderView/app/src/main/res/layout/revistas.xml
@@ -10,17 +10,21 @@
         android:id="@+id/liPrincipal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="5dp">
+        android:layout_marginVertical="5dp"
+        android:layout_marginHorizontal="5dp"
+        android:background="#E3E4E5"
+        android:gravity="center">
 
         <ImageView
             android:id="@+id/imgPortada"
             android:layout_width="100dp"
-            android:layout_height="match_parent"
-            app:srcCompat="@android:drawable/btn_star_big_on" />
+            android:layout_height="wrap_content"
+            app:srcCompat="@android:drawable/btn_star_big_on"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginLeft="10dp">
 
@@ -30,13 +34,19 @@
                 android:layout_height="wrap_content"
                 android:text="título"
                 android:textStyle="bold"
+                android:textSize="18dp"
+                android:gravity="center"
                 />
 
             <TextView
                 android:id="@+id/idDescripcion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="descripción" />
+                android:text="descripción"
+                android:layout_marginTop="5dp"
+                android:justificationMode="inter_word"
+                android:paddingHorizontal="4dp"
+                />
         </LinearLayout>
     </LinearLayout>
 
