--- a/PlaceHolderView/app/src/main/res/layout/revistas.xml
+++ b/PlaceHolderView/app/src/main/res/layout/revistas.xml
@@ -19,7 +19,7 @@
             android:id="@+id/imgPortada"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            app:srcCompat="@android:drawable/btn_star_big_on"
+            app:srcCompat="@android:drawable/btn_dialog"
             />
 
         <LinearLayout
